OpConsultation: Added new attributes.